--- a/docs/getting-started/secret.yaml
+++ b/docs/getting-started/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: webhook-secret
   namespace: getting-started
 stringData:
-  token: <REPLACE_WITH_GITHUB_TOKEN>
+  token: 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
   secret: random-string-data
